# Relay

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  relay  relay.py  relay.spec  requirements.txt
.github/workflows/: release.yml
relay_ci/: audit.py  relay-audit.yml
relay_core/: auto.py  brain.py  brain_auto.py  chain.py  cleaner.py  commands.py  constants.py  diagnose.py  diff.py  git.py  hooks.py  intelligence.py  main.py  memory.py  models.py  outcome.py  planner.py  routing.py  triggers.py  tui.py  types.py  utils.py  verifiers.py  wizard.py
relay_dashboard/: server.py
relay_dashboard/templates/: index.html
scripts/: build-binary.sh
